[project]
name = "cloud-ip-ranges"
version = "0.1.1"
description = "Automated collection of cloud provider IP ranges"
requires-python = ">=3.10"
dependencies = [
    "cachetools>=5.5.0",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
    "defusedxml>=0.7.1",
]

[project.scripts]
cloud-ip-ranges = "cloud_ip_ranges:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "codecov>=2.1.13",
    "coverage>=7.8.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "vulture>=2.14",
    "xenon>=0.9.3",
]


[tool.ruff]
exclude = ["docs"]
line-length = 160
indent-width = 4  # Same as autopep8 default

[tool.ruff.format]
quote-style = "double"  # Or "single" if you prefer
indent-style = "space"  # Use spaces instead of tabs
line-ending = "lf"  # Keep consistency
preview = true

[tool.ruff.lint]
select = ["E9", "F82", "F401", "F841", "B", "RUF"]  # Syntax errors, undefined names, unused imports/vars, bugbear, ruf
ignore = ["F821"]  # Ignore specific docstring rules

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "B", "RUF"]  # Allow long lines and bugbear/ruf issues in tests

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
pythonpath = ["."]

[tool.pyright]
exclude = ["**/__pycache__", "**/node_modules", "**/dist", "**/build", "**/venv", "**/.venv", "**/docs", "**/tests"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "docs"]

[tool.vulture]
exclude = ["dist", "build", "venv", ".venv", "tests", "docs" ]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*", "do_*"]
# make_whitelist = true
min_confidence = 80
paths = ["."]
sort_by_size = true
